--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Nighthawk Pages 
 description: "Class of 2025"
 owner_name: John Mortensen
-github_username: nighthawkcoders
-github_repo: "portfolio_2025" 
-baseurl: "/portfolio_2025"
+github_username: miggysp
+github_repo: "IterationTteamTeach" 
+baseurl: "/IterationTteamTeach"
 future: true
 remote_theme: jekyll/minima
 minima:
